Dark mode fix

--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -106,7 +106,8 @@
     }
 
     .story-franchises-list li,
-    .story-characters-list li {
+    .story-characters-list li,
+    .story-ships-list li {
       border-color: rgba(#fff,0.4);
       
       &:hover {
